--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,25 @@
 <div>
-  <%= @user.name %>
+  <%= render 'user', user: @user %>
 </div>
+
+<div class="bio-container">
+  <h3>Bio</h3>
+  <p><%= @user.bio.truncate(80) %></p>
+  
+  <div>
+    <% @user.recent_posts.each do |post| %>
+      <% post.text = post.text.truncate(48) %>
+      <%= render 'posts/post', post: post %>
+    <% end %>
+  </div>
+
+  <%= link_to user_posts_url(@user.id) do%>
+    <form method="post" class="button_to">
+      <button type="submit">See All</button>
+      <input name="authenticity_token" type="hidden" value="10f2163b45388899ad4d5ae948988266befcb6c3d1b2451cf657a0c293d605a6"/>
+    </form> 
+  <%end%>
+
+</div>
+
+
