--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,9 +5,12 @@
 <div>
   <% @posts.each do |post| %>
     
-    <% post.text = post.text.truncate(48) %>
-    <%= render post %>
     
+    <%= link_to user_post_path(@user.id, post.id) do%>
+      <% post.text = post.text.truncate(48) %>
+      <%= render post %>
+    <% end %>
+
     <%= render post.recent_comments %>
 
   <% end %>
