--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,12 @@
   <p><%= @user.bio.truncate(80) %></p>
   
   <div>
-    <%= render @user.recent_posts %>
+    <% @user.recent_posts.each do |post| %>
+      <%= link_to user_post_path(@user.id, post.id) do%>
+        <% post.text = post.text.truncate(48) %>
+        <%= render post %>
+      <% end %>
+    <% end %>
   </div>
   
   <%= render 'show-bttn' %>
