--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,7 +5,8 @@
   color: whitesmoke;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -35,10 +36,13 @@ a {
 }
 
 a:visited {
- color: whitesmoke;
+  color: whitesmoke;
 }
 
-.user-header, .post-header, .bio-container, .comments-container > * {
+.user-header,
+.post-header,
+.bio-container,
+.comments-container > * {
   background-color:  rgb(196, 56, 56);
   border-radius: max(0px, min(8px, ((100vw - 4px) - 100%) * 9999)) / 8px;
   padding: 12px;
