--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,11 @@
     <% end %>
   </div>
   
-  <%= render 'show-bttn' %>
+  <%= render 'bttn-show' %>
+
+  <div class='button_to'>
+        <%= link_to 'Back', users_path %>
+    </div>
   
 </div>
 
