--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,7 +42,8 @@ a:visited {
 .user-header,
 .post-header,
 .bio-container,
-.comments-container > * {
+.comments-container > *,
+.bttn-container {
   background-color: rgb(196, 56, 56);
   border-radius: max(0px, min(8px, ((100vw - 4px) - 100%) * 9999)) / 8px;
   padding: 12px;
@@ -55,6 +56,11 @@ a:visited {
   min-width: 480px;
 }
 
+.fix-header {
+  min-width: 828px;
+  max-width: 828px;
+}
+
 .comments-container > * {
   font-size: 12px;
   border-top-left-radius: 0;
@@ -63,7 +69,7 @@ a:visited {
   margin-left: 48px;
 }
 
-.button_to button {
+.button_to > * {
   color: rgb(196, 56, 56);
   border-radius: max(0px, min(8px, ((100vw - 4px) - 100%) * 9999)) / 8px;
   text-decoration: none;
@@ -88,6 +94,41 @@ a:visited {
   padding: 12px;
   margin: 12px;
   max-width: 480px;
+}
+
+.fix-inner {
+  max-width: 800px;
+}
+
+.bttn-container {
+  display: flex;
+  flex-direction: column;
+  padding-top: 24px;
+}
+
+.bttn-container > * {
+  align-self: center;
+  flex-direction: column;
+  border: none;
+}
+
+.comment-box > *,
+.title-box > * {
+  background-color: rgba(53, 45, 45, 0.5);
+  border-radius: max(0px, min(8px, ((100vw - 4px) - 100%) * 9999)) / 8px;
+  text-justify: initial;
+  border: none;
+  padding: 12px;
+  margin: 12px;
+  width: 480px;
+}
+
+.comment-box > * {
+  height: 240px;
+}
+
+.bttn-container ::placeholder {
+  color: whitesmoke;
 }
 
 .user-header {
