--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,15 +1,32 @@
-<div class="post-header">
-  
-  <div class="post-inner">
-    <h2><%= post.title %></h2>
+<% final_page = current_page?(user_post_path(@user.id, post.id)) %>
 
-    <p><%= post.text %></p>
-  </div>
-  
+<% if final_page %>
+  <div class="fix-header post-header">
 
-  <div class="post-counters">
-    <h3>Comments: <%= post.comments_counter %></h3>
-    <h3>Likes: <%= post.likes_counter %></h3>
-  </div>
+    <div class="fix-counter post-counters">
+      <h3>Comments: <%= post.comments_counter %></h3>
+      <h3>Likes: <%= post.likes_counter %></h3>
+    </div>
+
+    <div class="fix-inner post-inner">
+      <h2><%= post.title %> by <%= post.user.name %></h2>
+      <p><%= post.text %></p>
+    </div>
 
   </div>
+
+  <% else %>
+  <div class="post-header">
+
+    <div class="post-inner">
+      <h2><%= post.title %></h2>
+      <p><%= post.text %></p>
+    </div>
+
+    <div class="post-counters">
+      <h3>Comments: <%= post.comments_counter %></h3>
+      <h3>Likes: <%= post.likes_counter %></h3>
+    </div>
+
+  </div>
+<% end %>
