--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,9 +3,12 @@
 </div>
 
 <div>
+  <%= render 'bttn-post' %>
+</div>
+
+<div>
   <% @posts.each do |post| %>
-    
-    
+
     <%= link_to user_post_path(@user.id, post.id) do%>
       <% post.text = post.text.truncate(48) %>
       <%= render post %>
