--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,7 +2,7 @@
   <div class='bttn-container'> 
     
     <div class='title-box'>
-      <%= form.text_field :title, class: "form-title", placeholder: "Title" %><br>
+      <%= form.text_field :title, class: "form-title", placeholder: "Post title..." %><br>
     </div>
     
     <div class='comment-box'>
