--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,31 +1,44 @@
 <% final_page = current_page?(user_post_path(@user.id, post.id)) %>
 
 <% if final_page %>
-  <div class="fix-header post-header">
+  <div class="post-header fix-header">
 
-    <div class="fix-counter post-counters">
+    <div class="post-counters fix-counter ">
       <h3>Comments: <%= post.comments_counter %></h3>
-      <h3>Likes: <%= post.likes_counter %></h3>
+
+      <%= button_to user_post_likes_path(@user.id, post.id) do %>
+        <div class="like-container">
+          <%= render 'likes/like', method: :post %>
+          <%= post.likes_counter %>
+        </div>
+      <%end%>
     </div>
 
-    <div class="fix-inner post-inner">
+    <div class="post-inner fix-inner ">
       <h2><%= post.title %> by <%= post.user.name %></h2>
       <p><%= post.text %></p>
     </div>
 
   </div>
-
-  <% else %>
+<% else %>
   <div class="post-header">
-
-    <div class="post-inner">
-      <h2><%= post.title %></h2>
-      <p><%= post.text %></p>
-    </div>
+    
+    <%= link_to user_post_path(@user.id, post.id) do%>
+      <div class="post-inner">
+        <h2><%= post.title %></h2>
+        <p><%= post.text.truncate(48) %></p>
+      </div>
+    <% end %>
 
     <div class="post-counters">
       <h3>Comments: <%= post.comments_counter %></h3>
-      <h3 class="like-container"> <%= render 'likes/like' %> <%= post.likes_counter %></h3>
+
+      <%= button_to user_post_likes_path(@user.id, post.id) do %>
+        <div class="like-container">
+          <%= render 'likes/like', method: :post %>
+          <%= post.likes_counter %>
+        </div>
+      <%end%>
     </div>
 
   </div>
