Add posts' integration tests

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -26,7 +26,7 @@
 
     <div class="post-counters">
       <h3>Comments: <%= post.comments_counter %></h3>
-      el
+      <%=  render 'likes/like', post: post %>
     </div>
 
   </div>
