--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,19 +5,23 @@
   color: whitesmoke;
 }
 
-html,
 body {
-  height: 100%;
-}
-
-html {
-  display: table;
-  margin: auto;
-}
-
-body {
-  display: table-cell;
+  margin-top: 10vh;
+  padding: 3vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   vertical-align: middle;
+}
+
+.nav-bar {
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  top: 0;
+  background-color: brown;
+  width: 100%;
 }
 
 .photo img {
@@ -43,13 +47,18 @@ a:visited {
 .post-header,
 .bio-container,
 .comments-container > *,
-.bttn-container {
+.bttn-container,
+.auth-container {
   background-color: rgb(196, 56, 56);
   border-radius: max(0px, min(8px, ((100vw - 4px) - 100%) * 9999)) / 8px;
   padding: 12px;
   margin: 12px;
   min-width: 828px;
   max-width: 828px;
+}
+
+.auth-container {
+  min-width: 0;
 }
 
 .post-header {
