--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,34 @@
-<h2>Sign up</h2>
+<div class='auth-container'>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="field title-box">
+      <%= f.text_field :name, class: "title-box", placeholder: "Name" %>
+    </div>
 
+    <div class="field title-box">
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "e-mail" %>
+    </div>
 
-   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <div class="field ">
+      <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <div class='title-box'>
+        <%= f.password_field :password, autocomplete: "new-password", placeholder: "password" %>
+      </div>
+    </div>
+
+    <div class="field title-box">
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "repeat password" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
+  <div class="actions button_to">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class='comments-container'>
+  <%= render "devise/shared/links" %>
+</div>
