--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,13 +57,17 @@ a:visited {
   max-width: 828px;
 }
 
+.buttons {
+  display: flex;
+  justify-items: flex-end;
+}
+
 .auth-container {
   min-width: 0;
 }
 
 .post-header {
   min-width: 480px;
-  position: relative;
 }
 
 .fix-header {
@@ -74,7 +78,7 @@ a:visited {
 .comments-container > * {
   font-size: 12px;
   border-top-left-radius: 0;
-  min-width: 240px;
+  min-width: 480px;
   max-width: 480px;
   margin-left: 48px;
 }
