--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,18 +2,20 @@
   <%= render @post %>
 </div>
 
-<%= link_to new_user_post_comment_path(@user.id, @post.id) do%>
-  <%= render 'add-button' %>
-<%end%>
-
 <div>
   <%= render @post.comments %>
 </div>
 
-<div class='button_to'>
+<div class="buttons">
+  <%= link_to new_user_post_comment_path(@user.id, @post.id) do%>
+    <%= render 'add-button' %>
+  <%end%>
 
+  <%= render 'sub-button' %>
+</div>
+
+<div class='button_to'>
   <button type="submit">
     <%= link_to 'Close', user_posts_path %>
   </button>
-  
 </div>
