--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <% if user_signed_in? %>
         <p class="home"><%= link_to "Home", users_path %></p>
         <p><%= current_user.name %></p>
-      <%= button_to "Sign out", destroy_user_session_path, :method => :delete, data:{turbo:false} %>
+      <%= button_to "Sign out", destroy_user_session_path, method: :delete, data:{turbo:false} %>
       <% end %>
     </div>
     <p class="notice"><%=notice %></p>
