--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -6,6 +6,9 @@
     <div class="post-counters fix-counter ">
       <h3>Comments: <%= post.comments_counter %></h3>
       <%=  render 'likes/like', post: post %>
+      <% if can? :destroy, @post %>
+        <%= button_to "Delete Post", user_post_path(@user.id, post.id), method: :delete %>
+      <% end %>
     </div>
 
     <div class="post-inner fix-inner ">
@@ -15,16 +18,16 @@
 
   </div>
 <% else %>
-  <div class="post-header">
+  <div class="post-header fix-header">
     
     <%= link_to user_post_path(@user.id, post.id) do%>
-      <div class="post-inner">
+      <div class="post-inner fix-inner">
         <h2><%= post.title %></h2>
         <p><%= post.text.truncate(48) %></p>
       </div>
     <% end %>
 
-    <div class="post-counters">
+    <div class="post-counters fix-counter">
       <h3>Comments: <%= post.comments_counter %></h3>
       <%=  render 'likes/like', post: post %>
     </div>
