--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,7 +8,11 @@
 
 <div>
   <% @posts.each do |post| %>
-    <%= render post %>
-    <%= render post.recent_comments %>
+    <div>
+      <%= render post %>
+    </div>
+    <div>
+      <%= render post.recent_comments %>
+    </div>
   <% end %>
 </div>
