--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -18,7 +18,7 @@
 
   </div>
 <% else %>
-  <div class="post-header fix-header">
+  <div class="post-header">
     
     <%= link_to user_post_path(@user.id, post.id) do%>
       <div class="post-inner fix-inner">
