--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
   
   <p><%= @user.bio %></p>  <%# text[0..100] %>
   
-  <div>
+  <div class="contain-post">
     <% @user.recent_posts.each do |post| %>
         <%= render post %>
     <% end %>
